--- a/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
@@ -41,6 +41,7 @@ jobs:
         mkdir /github/home/.ssh/ && mkdir /workdir
         
     - name: Compile GCC 10.3
+      id: gcc
       run: |
         cd /workdir
         wget https://ftp.gnu.org/gnu/make/make-4.3.tar.gz
@@ -96,6 +97,7 @@ jobs:
         make -j 2
         make install
         make localedata/install-locales
+        echo "::set-output name=status::success"
 
     - name: Get source code
       working-directory: /workdir
