--- a/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable.yml
@@ -123,9 +123,9 @@ jobs:
         xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         cd linux-$xanmod_stable
-        rm -rf .config
-        wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config-5.11.13-xanmod1-stable
-        sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
+        #rm -rf .config
+        #wget -O .config https://raw.githubusercontent.com/ylx2016/kernel/master/config-5.11.13-xanmod1-stable
+        #sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         
         sudo time make -j$(nproc) rpm-pkg
