--- a/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
@@ -46,8 +46,8 @@ jobs:
         df -hT $PWD
         #xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         #xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        xanmod_stable=5.11.3-xanmod1
-        xanmod_stable_ver=5.11.3
+        xanmod_stable=5.11.4-xanmod1
+        xanmod_stable_ver=5.11.
         kernel_file=https://github.com/xanmod/linux/archive/refs/tags/$xanmod_stable.zip
         wget $kernel_file && unzip $xanmod_stable.zip -d /workdir
         
@@ -65,8 +65,8 @@ jobs:
       run: |
         #xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
         #xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        xanmod_stable=5.11.3-xanmod1
-        xanmod_stable_ver=5.11.3
+        xanmod_stable=5.11.4-xanmod1
+        xanmod_stable_ver=5.11.4
         cd linux-$xanmod_stable
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
