--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: docker.io/teddysun/rpmbuild:7
+    container: https://hub.docker.com/r/teddysun/rpmbuild:7
     
     steps:
     - name: Checkout
