--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@
 # Change from P3TERX
 #
 
-name: Test
+name: Test Update config
 
 on:
   workflow_dispatch:
@@ -33,8 +33,7 @@ jobs:
       run: |
         sudo -E sed -i~orig -e 's/# deb-src/deb-src/' /etc/apt/sources.list   
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential bzip2 gawk gettext git patch unzip htop wget curl -y
-        sudo -E apt-get -qq build-dep linux -y
+        sudo -E apt-get -qq install bzip2 gawk git patch unzip htop wget curl -y
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
@@ -42,10 +41,31 @@ jobs:
         sudo mkdir -p /workdir/upload
         sudo chown $USER:$GROUPS /workdir
         sudo chown $USER:$GROUPS /workdir/upload
-
+        
+    - name: Update config
+      id: update
+      run: |
+        sudo apt install -y rpm2cpio 
+        elrepo_c7_ver=$(curl -s 'https://elrepo.org/linux/kernel/el7/x86_64/RPMS/?C=N;O=D' | grep 'kernel-ml-headers' | head -n 1 | awk -F '"' '{print $4}' | awk -F '-' '{print $4}')
+        wget https://elrepo.org/linux/kernel/el7/x86_64/RPMS/kernel-ml-$elrepo_c7_ver-1.el7.elrepo.x86_64.rpm
+        rpm2cpio kernel-ml-$elrepo_c7_ver-1.el7.elrepo.x86_64.rpm | cpio -divm
+        cd /workdir/boot
+        patch -p1 < ~/work/kernel/kernel/elrepo_config.patch config-*-1.el7.elrepo.x86_64
+        rm -rf /work/kernel/kernel/config_elrepo
+        mv config-*-1.el7.elrepo.x86_64 ~/work/kernel/kernel/config_elrepo
+        cat ~/work/kernel/kernel/config_elrepo
+        echo "::set-output name=status::success"
+        
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          
+    - name: Push Commits
+      if: steps.update.outputs.status == 'success' && !cancelled()
+      env:
+        DOWNSTREAM_BRANCH: main
+        TZ: Asia/Shanghai
+      run: git push origin $DOWNSTREAM_BRANCH
