--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,6 +67,6 @@ jobs:
     - name: Push Commits
       if: steps.update.outputs.status == 'success' && !cancelled()
       env:
-        DOWNSTREAM_BRANCH: main
+        DOWNSTREAM_BRANCH: master
         TZ: Asia/Shanghai
       run: git push origin $DOWNSTREAM_BRANCH
