--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -3,18 +3,17 @@
 # See /LICENSE for more information.
 #
 # Description: Build Kernel using GitHub Actions
-# Change from P3TERX
 #
 
-name: Test Update config
+name: Update elrepo config
 
 on:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+    #inputs:
+    #  ssh:
+    #    description: 'SSH connection to Actions'
+    #    required: false
+    #    default: 'false'
 
 env:
   TZ: Asia/Shanghai
