--- a/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
+++ b/.github/workflows/Centos_kernel_latest_xanmod_stable_gcc9.yml
@@ -43,12 +43,13 @@ jobs:
       working-directory: /workdir
       run: |
         df -hT $PWD
-        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        #xanmod_stable=5.11.9-xanmod1
-        #xanmod_stable_ver=5.11.
-        kernel_file=https://github.com/xanmod/linux/archive/refs/tags/$xanmod_stable.zip
-        wget $kernel_file && unzip $xanmod_stable.zip -d /workdir
+        #echo "xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')" >> $GITHUB_ENV
+        #echo "xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')" >> $GITHUB_ENV
+        
+        echo "xanmod_stable=5.11.8-xanmod1" >> $GITHUB_ENV
+        echo "xanmod_stable_ver=5.11.8" >> $GITHUB_ENV
+        kernel_file=https://github.com/xanmod/linux/archive/refs/tags/${xanmod_stable}.zip
+        wget $kernel_file && unzip ${xanmod_stable}.zip -d /workdir
         
         
     - name: SSH connection to Actions
@@ -62,18 +63,14 @@ jobs:
       id: compile
       working-directory: /workdir
       run: |
-        xanmod_stable_ver=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}' | awk -F '[-]' '{print $1}')
-        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
-        #xanmod_stable=5.11.9-xanmod1
-        #xanmod_stable_ver=5.11.9
-        cd linux-$xanmod_stable
+        cd linux-${xanmod_stable}
         sed -ri '/CONFIG_SYSTEM_TRUSTED_KEYS/s/=.+/=""/g' .config && scripts/config --disable MODULE_SIG && scripts/config --disable DEBUG_INFO
         echo -e "$(nproc) thread compile"
         ln -s /opt/rh/devtoolset-9/root/usr/bin/* /usr/local/bin/
         sudo time make -j$(nproc) rpm-pkg
         mv /root/rpmbuild/RPMS/* /workdir/upload
         echo "::set-output name=status::success"
-        echo "FILE_DATE=Kernel_Centos_$xanmod_stable$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=Kernel_Centos_${xanmod_stable}$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
         
     - name: Check space usage
       if: (!cancelled())
@@ -90,7 +87,6 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        xanmod_stable=$(curl -s https://sourceforge.net/projects/xanmod/files/releases/stable/ | grep 'class="folder ">' | head -n 1 | awk -F '"' '{print $2}')
         echo "::set-output name=release_tag::Centos_Kernel_${xanmod_stable}_latest_$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         echo "for centos 7" >> release.txt
