--- a/.github/workflows/update_elrepo_config.yml
+++ b/.github/workflows/update_elrepo_config.yml
@@ -68,4 +68,5 @@ jobs:
       env:
         DOWNSTREAM_BRANCH: master
         TZ: Asia/Shanghai
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
       run: sudo git push origin master
