--- a/.github/workflows/Centos_kernel_latest_bbrplus.yml
+++ b/.github/workflows/Centos_kernel_latest_bbrplus.yml
@@ -1,4 +1,4 @@
-#
+# 不维护了
 # This is free software, licensed under the MIT License.
 # See /LICENSE for more information.
 #
@@ -10,8 +10,8 @@ name: Centos Kernel Latest BBRPLUS
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron: "39 20 * * 2,4"
+  #schedule:
+   #- cron: "39 20 * * 2,4"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
