--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -125,3 +125,9 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: /workdir/upload/*
+        
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
+        keep_minimum_runs: 10 
