--- a/.github/workflows/Centos_kernel_latest.yml
+++ b/.github/workflows/Centos_kernel_latest.yml
@@ -10,8 +10,8 @@ name: Centos Kernel Latest
 
 on:
   workflow_dispatch:
-  #schedule:
-    #- cron: "39 20 * * *"
+  schedule:
+    - cron: "38 20 * * 1,4"
    # inputs:
      # ssh:
        # description: 'SSH connection to Actions'
