--- a/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
+++ b/.github/workflows/Ubuntu_kernel_arm64_5.13.yml
@@ -12,7 +12,6 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "36 20 * * 2,6"
-    #- cron: "36 20 * * *"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
@@ -22,6 +21,7 @@ on:
 env:
   UPLOAD_DIR: false
   UPLOAD_RELEASE: true
+  UPLOAD_WETRANSFER: true
   TZ: Asia/Shanghai
 
 jobs:
@@ -108,6 +108,15 @@ jobs:
       with:
         name: ${{ env.FILE_DATE }}
         path: /workdir/upload
+        
+    - name: Upload to WeTransfer
+      id: wetransfer
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer wet -s -p 16 --no-progress /workdir/upload 2>&1 | tee wetransfer.log
+        echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
+        echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"        
 
     - name: Generate release tag
       id: tag
