--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -10,8 +10,8 @@ name: Ubuntu Kernel Latest
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "36 20 * * 1,4"
+  #schedule:
+    #- cron: "36 20 * * 1,4"
    # inputs:
     #  ssh:
      #   description: 'SSH connection to Actions'
