--- a/.github/workflows/Ubuntu_kernel_latest.yml
+++ b/.github/workflows/Ubuntu_kernel_latest.yml
@@ -27,7 +27,8 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    container: docker.io/ubuntu:21.10
+    
     steps:
     - name: Checkout
       uses: actions/checkout@main
